fix portfolio item overflow

--- a/css/style.css
+++ b/css/style.css
@@ -354,7 +354,9 @@ h2 {
 }
 
 .box p {
-  padding: 32px 40px 32px;
+  width: 360px;
+  height: 96px;
+  padding: 40px 32px 40px;
 }
 
 .portfolio-item-overlay {
@@ -366,8 +368,6 @@ h2 {
 
   background: var(--iris);
   color: var(--cloud);
-
-  line-height: 24px;
 
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
@@ -398,6 +398,10 @@ h2 {
 .portfolio-item .name {
   margin-top: 0;
   margin-bottom: 8px;
+}
+
+.portfolio-item > p {
+  padding-left: 16px;
 }
 
 footer {
